# FptnClient-Android

./: .editorconfig  .gitignore  .gitmodules  README.md  android-studio  build.gradle.kts  gradle.properties  renovate.json  settings.gradle.kts
.github/workflows/: android.yml
app/: .gitignore  build.gradle.kts  google-services.json
app/src/androidTest/java/com/filantrop/pvnclient/: ExampleInstrumentedTest.kt
app/src/androidTest/java/org/fptn/vpn/: ExampleInstrumentedTest.kt
app/src/androidTest/java/org/fptn/vpnclient/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  1conanfile.py  CMakeLists.txt  conan_android_toolchain.cmake  conanfile.py  conanfile.txt  httpsclient.cpp  native-lib.cpp  websocket_client.cpp
app/src/main/cpp/src/: https_client.cpp  speed_estimator.cpp  websocket_client.cpp  websocket_client.h
app/src/main/cpp/src/jnienv/: jnienv.cpp
app/src/main/cpp/src/tmp/: websocket_client.cpp
app/src/main/cpp/src/wrappers/utils/: utils.cpp  utils.h
app/src/main/cpp/src/wrappers/wrapper_https_client/: wrapper_https_client.cpp  wrapper_https_client.h
app/src/main/cpp/src/wrappers/wrapper_websocket_client/: wrapper_websocket_client.cpp  wrapper_websocket_client.h
app/src/main/res/drawable/: application_background.xml  bg_spinner_servers.xml  bg_spinner_servers_down.xml  blue_outline.xml  blue_outline_white_background.xml  ic_baseline_close_24.xml  ic_baseline_your_servers_24.xml  icon_account_circle_100.xml  round_back_secondary_100.xml  round_back_secondary_cancel_100.xml  rounde_corner.xml  spinner_background.xml  spinner_background_down.xml  toggle_button.xml
app/src/main/res/layout/: activity_main.xml  activity_test.xml  each_server_item.xml  form.xml  home_layout.xml  home_list_recycler_server_item.xml  home_list_server.xml  home_recycler_server_item.xml  login_layout.xml  recycler_server_item.xml  settings_layout.xml  settings_layout_update_token.xml  settings_server_list_item.xml  share_dialog.xml  sni_dialog_layout.xml  splash_layout.xml
app/src/main/res/menu/: bottom_nav_bar_menu.xml  menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: color.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ru-rRU/: ru_language.xml  strings.xml
app/src/main/res/values-v23/: themes.xml
auth/data/: build.gradle.kts
auth/domain/: build.gradle.kts
auth/ui/: build.gradle.kts
auth/ui/src/main/: AndroidManifest.xml
auth/ui/src/main/res/values/: strings.xml
auth/ui/src/main/res/values-ru/: strings.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: AndroidApplicationConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  KotlinLibraryConventionPlugin.kt
conan/profiles/: android-studio
config/detekt/: baseline.xml  detekt.yml
core/common/: build.gradle.kts
core/designsystem/: build.gradle.kts
core/designsystem/src/main/res/values/: dimens.xml
core/model/: build.gradle.kts
core/network/: build.gradle.kts
core/persistent/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
home/data/: build.gradle.kts
home/domain/: build.gradle.kts
home/ui/: build.gradle.kts
settings/data/: build.gradle.kts
settings/domain/: build.gradle.kts
settings/ui/: build.gradle.kts
settings/ui/src/main/res/values/: themes.xml
(+254 files in other folders)
